--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,14 +31,12 @@ jobs:
       - name: Deploy to Server
         uses: azure/powershell@v1
         with:
+          azPSVersion: 'latest'
           inlineScript: |
-            $credentials = New-Object System.Management.Automation.PSCredential(sahil, (ConvertTo-SecureString Sahil1234567 -AsPlainText -Force))
+            $credentials = New-Object System.Management.Automation.PSCredential("sahil", (ConvertTo-SecureString "Sahil1234567" -AsPlainText -Force))
             New-PSDrive -Name X -PSProvider FileSystem -Root "\\new-vm\coreapp" -Persist -Credential $credentials
             Copy-Item -Path './publish/*' -Destination 'X:\' -Force
             Remove-PSDrive -Name X
-        env:
-          IIS_USERNAME: sahil
-          IIS_PASSWORD: Sahil1234567
 
   post-build:
     runs-on: windows-latest
