--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,9 @@ jobs:
             New-PSDrive -Name X -PSProvider FileSystem -Root "\\new-vm\coreapp" -Persist -Credential $credentials
             Copy-Item -Path './publish/*' -Destination 'X:\' -Force
             Remove-PSDrive -Name X
+        env:
+          IIS_USERNAME: sahil
+          IIS_PASSWORD: Sahil1234567
 
   post-build:
     runs-on: windows-latest
