--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Publish application
+        run: dotnet publish --no-restore --configuration Release --output ./publish
+  
+
       - name: Restore dependencies
         run: dotnet restore
 
