--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
             Test-NetConnection -ComputerName 10.0.1.4 -Port 445
             $credentials = New-Object System.Management.Automation.PSCredential("sahil", (ConvertTo-SecureString "Sahil1234567" -AsPlainText -Force))
             # Use the correct network path for the shared folder
-            New-PSDrive -Name Y -PSProvider FileSystem -Root "\\new-vm\coreapp" -Persist -Credential $credentials
+            New-PSDrive -Name Y -PSProvider FileSystem -Root "\\10.0.1.4\coreapp" -Persist -Credential $credentials
             Copy-Item -Path './publish/*' -Destination 'Y:\' -Force
             Remove-PSDrive -Name Y
         env:
