--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,9 +38,9 @@ jobs:
           azPSVersion: 'latest'
           inlineScript: |
             Test-NetConnection -ComputerName 20.5.160.28 -Port 445
-            $credentials = New-Object System.Management.Automation.PSCredential("new-vm", (ConvertTo-SecureString "Sahil1234567" -AsPlainText -Force))
+            $credentials = New-Object System.Management.Automation.PSCredential("sahil", (ConvertTo-SecureString "Sahil1234567" -AsPlainText -Force))
             # Use the correct network path for the shared folder
-            New-PSDrive -Name Y -PSProvider FileSystem -Root "\\10.0.1.4\coreapp" -Persist -Credential $credentials
+            New-PSDrive -Name Y -PSProvider FileSystem -Root "\\new-vm\coreapp" -Persist -Credential $credentials
             Copy-Item -Path './publish/*' -Destination 'Y:\' -Force
             Remove-PSDrive -Name Y
         env:
