--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
             $credentials = New-Object System.Management.Automation.PSCredential("${{ secrets.IIS_USERNAME }}", (ConvertTo-SecureString "${{ secrets.IIS_PASSWORD }}" -AsPlainText -Force))
             
             # Map network drive
-            New-PSDrive -Name Y -PSProvider FileSystem -Root "\\new-vm\coreapp" -Persist -Credential $credentials
+            New-PSDrive -Name Y -PSProvider FileSystem -Root "D:\coreapp" -Persist -Credential $credentials
             
             # Copy files to the network drive
             Copy-Item -Path './publish/*' -Destination 'Y:\' -Force
