--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,12 @@ jobs:
 
     - name: Deploy to IIS on Azure VM
       run: |
-        .\msdeploy.exe -verb:sync -source:package=./artifact.zip -dest:auto,computerName=http://20.5.240.49:8172/msdeploy.axd,username=$env:USERNAME,password=$env:PASSWORD,authType=Basic,msdeploySite=Test -verbose
+        $msdeployPath = "C:\Program Files (x86)\IIS\Microsoft Web Deploy V3\msdeploy.exe"
+        if (Test-Path $msdeployPath) {
+          & $msdeployPath -verb:sync -source:package=./artifact.zip -dest:auto,computerName=http://20.5.240.49:8172/msdeploy.axd,username=$env:USERNAME,password=$env:PASSWORD,authType=Basic,msdeploySite=Test -verbose
+        } else {
+          Write-Error "msdeploy.exe not found at $msdeployPath"
+        }
       env:
         USERNAME: ${{ secrets.AZURE_IIS_USERNAME }}
         PASSWORD: ${{ secrets.AZURE_IIS_PASSWORD }}
