--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up .NET
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: '6.0'  # Use the appropriate version for your app
+        dotnet-version: '8.0'  # Use the appropriate version for your app
 
     - name: Restore dependencies
       run: dotnet restore
@@ -54,8 +54,14 @@ jobs:
     - name: Deploy to IIS on Azure VM
       run: |
         $msdeployPath = "C:\Program Files (x86)\IIS\Microsoft Web Deploy V3\msdeploy.exe"
+        $artifactPath = "$(Build.ArtifactStagingDirectory)\my-app-artifact\artifact.zip"
+        
         if (Test-Path $msdeployPath) {
-          & $msdeployPath -verb:sync -source:package=./artifact.zip -dest:auto,computerName=http://20.5.240.49:8172/msdeploy.axd,username=$env:USERNAME,password=$env:PASSWORD,authType=Basic,msdeploySite=Test -verbose
+          if (Test-Path $artifactPath) {
+            & $msdeployPath -verb:sync -source:package=$artifactPath -dest:auto,computerName=http://20.5.240.49:8172/msdeploy.axd,username=$env:USERNAME,password=$env:PASSWORD,authType=Basic,msdeploySite=Test -verbose
+          } else {
+            Write-Error "Artifact not found at $artifactPath"
+          }
         } else {
           Write-Error "msdeploy.exe not found at $msdeployPath"
         }
