--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,3 @@
-name: Build and Deploy to IIS on Azure VM
-
 on:
   push:
     branches:
@@ -16,7 +14,7 @@ jobs:
     - name: Set up .NET
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: '8.0'  # Use the appropriate version for your app
+        dotnet-version: '6.0'  # Use the appropriate version for your app
 
     - name: Restore dependencies
       run: dotnet restore
@@ -54,7 +52,7 @@ jobs:
     - name: Deploy to IIS on Azure VM
       run: |
         $msdeployPath = "C:\Program Files (x86)\IIS\Microsoft Web Deploy V3\msdeploy.exe"
-        $artifactPath = "$(Build.ArtifactStagingDirectory)\my-app-artifact\artifact.zip"
+        $artifactPath = "$(GITHUB_WORKSPACE)\my-app-artifact\artifact.zip"
         
         if (Test-Path $msdeployPath) {
           if (Test-Path $artifactPath) {
