--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Set up .NET
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: '6.0'  # Use the appropriate version for your app
+        dotnet-version: '6.0'
 
     - name: Restore dependencies
       run: dotnet restore
@@ -37,13 +37,14 @@ jobs:
 
   deploy:
     runs-on: windows-latest
-    needs: build  # This ensures the deploy job only runs after the build job succeeds
+    needs: build
 
     steps:
     - name: Download artifact
       uses: actions/download-artifact@v3
       with:
         name: my-app-artifact
+        path: ./my-app-artifact  # Ensure it downloads to a known directory
 
     - name: Install Web Deploy
       run: |
@@ -54,11 +55,14 @@ jobs:
         $msdeployPath = "C:\Program Files (x86)\IIS\Microsoft Web Deploy V3\msdeploy.exe"
         $artifactPath = "$env:GITHUB_WORKSPACE\my-app-artifact\artifact.zip"
         
+        Write-Output "Checking for msdeploy.exe at $msdeployPath"
+        Write-Output "Checking for artifact at $artifactPath"
+
         if (Test-Path $msdeployPath) {
           if (Test-Path $artifactPath) {
             & $msdeployPath -verb:sync -source:package=$artifactPath -dest:auto,computerName=http://20.5.240.49:8172/msdeploy.axd,username=$env:USERNAME,password=$env:PASSWORD,authType=Basic,msdeploySite=Test -verbose
           } else {
-            Write-Error "Artifact not found at $artifactPath"
+            Write-Error "Artifact not found at $artifactPath. Please check the download path and verify the artifact name."
           }
         } else {
           Write-Error "msdeploy.exe not found at $msdeployPath"
