--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,8 +65,8 @@ jobs:
             & $msdeployPath `
               -verb:sync `
               -source:package=$artifactPath `
-              -dest:auto,computerName=https://20.5.240.49:8172/msdeploy.axd,username=$env:USERNAME,password=$env:PASSWORD,authType=Basic,msdeploySite=Test`
-              -allowUntrusted
+              -dest:auto,computerName="https://20.5.240.49:8172/msdeploy.axd",username=$env:USERNAME,password=$env:PASSWORD,authType=Basic,msdeploySite=Test `
+              -allowUntrusted `
               -verbose
           } else {
             Write-Error "Artifact not found at $artifactPath. Please check the download path and verify the artifact name."
