--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,19 +61,20 @@ jobs:
         Write-Output "Checking for artifact at $artifactPath"
 
         if (Test-Path $msdeployPath) {
-          if (Test-Path $artifactPath) {
-            & $msdeployPath `
-              -verb:sync `
-              -source:package=$artifactPath `
-              -dest:auto,computerName="https://20.5.240.49:8172/msdeploy.axd",username=$env:USERNAME,password=$env:PASSWORD,authType=Basic,msdeploySite=Test `
-              -allowUntrusted `
-              -verbose
-          } else {
-            Write-Error "Artifact not found at $artifactPath. Please check the download path and verify the artifact name."
-          }
-        } else {
-          Write-Error "msdeploy.exe not found at $msdeployPath"
+        if (Test-Path $artifactPath) {
+        & $msdeployPath `
+            -verb:sync `
+            -source:package="$artifactPath" `
+            -dest:auto,computerName="https://20.5.240.49:8172/msdeploy.axd",username="$env:USERNAME",password="$env:PASSWORD",authType="Basic",msdeploySite="Test" `
+            -allowUntrusted `
+            -verbose
+         } else {
+        Write-Error "Artifact not found at $artifactPath. Please check the download path and verify the artifact name."
         }
+        } else {
+        Write-Error "msdeploy.exe not found at $msdeployPath"
+        }
+
       env:
         USERNAME: ${{ secrets.AZURE_IIS_USERNAME }}
         PASSWORD: ${{ secrets.AZURE_IIS_PASSWORD }}
