--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,8 +57,8 @@ jobs:
         $msdeployPath = "C:\Program Files (x86)\IIS\Microsoft Web Deploy V3\msdeploy.exe"
         $artifactPath = "$env:GITHUB_WORKSPACE\my-app-artifact\artifact.zip"
 
-        $username = "${{ secrets.AZURE_IIS_USERNAME }}"
-        $password = "${{ secrets.AZURE_IIS_PASSWORD }}"
+        $username = "sahil"
+        $password = "Nair1234567890"
         
         # Write-Output "Checking for msdeploy.exe at $msdeployPath"
         # Write-Output "Checking for artifact at $artifactPath"
