--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up .NET
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: '8.0'  # Adjust for your app's version
+        dotnet-version: '6.x'  # Adjust for .NET 6.x version
 
     - name: Restore dependencies
       run: dotnet restore
@@ -24,17 +24,17 @@ jobs:
     - name: Build the project
       run: dotnet build --configuration Release
 
-    - name: Publish the application
-      run: dotnet publish --configuration Release --output ./published
+    - name: Publish the project
+      run: dotnet publish --configuration Release --output ./publish
 
-    - name: Archive the published application
+    - name: Create artifact.zip
       run: |
-        Compress-Archive -Path ./published/* -DestinationPath ./artifact.zip
+        Compress-Archive -Path ./publish/* -DestinationPath ./artifact.zip
 
     - name: Upload artifact for deployment
       uses: actions/upload-artifact@v3
       with:
-        name: my-app-artifact
+        name: artifact
         path: ./artifact.zip
 
   deploy:
@@ -45,8 +45,8 @@ jobs:
     - name: Download artifact
       uses: actions/download-artifact@v3
       with:
-        name: my-app-artifact
-        path: ./my-app-artifact
+        name: artifact
+        path: ./artifact
 
     - name: Install Web Deploy
       run: choco install webdeploy
@@ -55,13 +55,11 @@ jobs:
       shell: pwsh
       run: |
         $msdeployPath = "C:\Program Files (x86)\IIS\Microsoft Web Deploy V3\msdeploy.exe"
-        $artifactPath = "C:\Users\sahil\Desktop\Pulish\artifact.zip.zip"
+        $artifactPath = "./artifact/artifact.zip"
 
         $username = "sahil"
         $password = "Nair1234567890"
         
-        # Write-Output "Checking for msdeploy.exe at $msdeployPath"
-        # Write-Output "Checking for artifact at $artifactPath"
         Write-Output "Username: $username"
         Write-Output "Artifact Path: $artifactPath"
 
@@ -70,7 +68,7 @@ jobs:
             & $msdeployPath `
               -verb:sync `
               -source:package=$artifactPath `
-              -dest:contentPath="Test",computerName=https://20.5.240.49:8172/msdeploy.axd,username=$username,password=$password,authType=Basic `
+              -dest:contentPath="Test",computerName="https://20.5.240.49:8172/msdeploy.axd",username=$username,password=$password,authType=Basic `
               -allowUntrusted `
               -verbose
           } else {
